syntax = "proto3";

package proto;

option java_package = "com.hederahashgraph.api.proto.java";
option java_multiple_files = true;

import "BasicTypes.proto";

/* Mark an account as deleted, moving all its current hbars to another account. It will remain in the ledger, marked as deleted, until it expires. Transfers into it a deleted account fail. But a deleted account can still have its expiration extended in the normal way. */
message CryptoDeleteTransactionBody {
    AccountID transferAccountID = 1; // The account ID which will receive all remaining hbars
    AccountID deleteAccountID = 2; // The account ID which should be deleted
}
